[project]
name = "agentic-rag-langgraph"
version = "0.1.0"
description = "Neste repositório irei construi um Agente RAG com LangGraph"
readme = "README.md"
authors = [
    { name = "EddyGiusepe", email = "eddychirinos.unac@gmail.com" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "chromadb>=1.2.2",
    "faiss-cpu>=1.12.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.2",
    "nbformat>=5.10.4",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
]
